pls say it wasn't this simple

--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -36,7 +36,7 @@ jobs:
         flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
     - name: Install Task Warrior
       run: |
-        sudo apt install taskwarrior
+        sudo apt install taskwarrior -y
     - name: Test with pytest
       run: |
         pytest
